--- a/views/admin/front-admin/order-history.ejs
+++ b/views/admin/front-admin/order-history.ejs
@@ -1,113 +1,106 @@
 <%- include('header') -%>
 
-  <div class="heading-row mb-20">
-    <div class="row align-item-center">
-       <div class="col-lg-6">
-          <h3 class="page-title"><span class="page-title-icon bg-gradient-primary text-white mr-2"><i class="mdi mdi-history"></i></span> Order History </h3>
-       </div>
-  </div>
-  </div>
-  <div class="row">
-    <div class="col-lg-12 grid-margin stretch-card">
-      <div class="card">
-         <div class="card-header">
-           <div class="row">
-            <div class="col-md-2">
-                  <div class="form-group">
-                    <select id="select-new" class="form-control">
-                        <option>User Name</option>
-                        <option>Willian Smith</option>
-                        <option>Dia Firdaus</option>
-                        <option>Zimmy Wu</option>
-                      </select>
-                  </div>
-            </div> 
-            <div class="col-md-2">
-                  <div class="form-group">
-                    <select id="select-new2" class="form-control">
-                        <option>Tx ID</option>
-                        <option>DE1002</option>
-                        <option>FV3485</option>
-                        
-                      </select>
-                  </div>
-            </div>  
-            <div class="col-md-2">
-                  <div class="form-group">
-                    <select id="select-new3" class="form-control">
-                        <option>Reffered By</option>
-                        <option>Willian Smith</option>
-                        <option>Dia Firdaus</option>
-                        <option>Zimmy Wu</option>
-                      </select>
-                  </div>
-            </div> 
-             <div class="col-md-2">
-                  <div class="form-group">
-                    <select id="select-new4" class="form-control">
-                        <option>Created Date</option>
-                        <option>Willian Smith</option>
-                        <option>Dia Firdaus</option>
-                        <option>Zimmy Wu</option>
-                      </select>
-                  </div>
-            </div> 
-                        
-         </div>
-         </div> 
-        <div class="card-body table-responsive">
-          <table class="table">
-            <thead>
-              <tr>
-                <th width="5%">S. No.</th>
-                <th width="10%">Order ID</th>
-                <th width="10%">Email</th>
-                <th width="10%">Wallet Address</th>
-                <th width="5%">Tx Hash</th>
-                <th width="10%">Payment Method</th>
-                <th width="5%">Tot Base</th>
-                <th width="10%">Currency Received</th>
-                <th width="10%">$EBT sent</th>
-                <th width="10%">Payment Status</th>
-                <th width="10%">Order Status</th>
-                
-                <th width="5%">Action</th>
+<style type="text/css">
+  td {
+    max-width: 150px !important;
+    overflow: hidden !important
+  }
+
+  #example_wrapper .dataTables_filter {
+    display: none !important;
+  }
+</style>
+<div class="heading-row mb-20">
+  <div class="row align-item-center">
+     <div class="col-lg-6">
+        <h3 class="page-title"><span class="page-title-icon bg-gradient-primary text-white mr-2"><i class="mdi mdi-history"></i></span> Order History </h3>
+     </div>
+</div>
+</div>
+<div class="row">
+  <div class="col-lg-12 grid-margin stretch-card">
+
+    <div class="card">
+      <div class="card-header">
+      </div>
 
 
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>1</td>
-                <td>De11202</td>
-                <td>John Doe</td>
-                <td>8675867586</td>
-                <td>xyz</td>
-                <td>5000</td>
-                <td>500</td>
-                <td>500</td>
-                <td>Pending</td>
-                <td>Pending</td>
-                <td>Online</td>
-                   <td>
-                  <div class="edit-icons">
-                   
-                    <a href="order-details.ejs" data-toggle="tooltip" data-placement="top" title="Delete"><i class="mdi mdi-eye"></i></a>
-                  </div>
-                </td>
-              </tr>
-            
-               
-            </tbody>
-          </table>
-        </div>
+      <div class="card-body table-responsive">
+        <%if(err_msg !="" ){%>
+          <span style="color: red; ">
+            <%= err_msg%>
+          </span>
+          <%}%>
+            <%if(success_msg !="" ){%>
+              <span style="color: #099441; ">
+                <%=success_msg%>
+              </span>
+              <%}%>
+                <table class="table" id="example">
+                  <thead>
+                    <tr>
+                      <th width="3%">S. No.</th>
+                      <th width="10%">Order ID</th>
+                      <!-- <th width="10%">Email</th> -->
+                      <th width="8%">User Wallet Address</th>
+                      <th width="8%">Admin Wallet Address</th>
+                      <th width="10%">Tx Hash</th>
+                      <!-- <th width="10%">Payment Method</th> -->
+                      <th width="5%">Total Ammount</th>
+                      <th width="5%">Currency Received</th>
+                      <th width="5%">$EBT sent</th>
+                      <th width="8%">Payment Status</th>
+                      <th width="8%">Order Status</th>
+                      <th width="8%">ScreenShot</th>
+                      <th width="8%">Date - Time</th>
+                    </tr>
+                  </thead>
+                  <tbody id="tbody">
+                    <% var i=1; if(order_details.length> 0){
+                      order_details.forEach(function(details){
+                      %>
+
+                      <tr>
+                        <td><%- i %></td>
+                        <td><%- details._id%></td>
+                        <!-- <td>John Doe</td> -->
+                        <td><a href="https://ropsten.etherscan.io/address/<%- details.sender_wallet_address%>" target="_blank"><%- details.sender_wallet_address%></a></td>
+                        <td><a href="https://ropsten.etherscan.io/address/<%- details.eth_wallet_address%>" target="_blank"><%- details.eth_wallet_address%></a></td>
+                        <td><a href="https://ropsten.etherscan.io/tx/<%- details.transaction_Id%>" target="_blank"><%- details.transaction_Id%></a></td>
+                        <!-- <td><%- details.payment_method%></td> -->
+                        <td><%- details.total_amnt%></td>
+                        <td><%- details.payment_type%></td>
+                        <td><%- details.ebt_count%></td>
+                        <td><%- details.payment_status%>
+                          <!-- <%if(details.payment_status=="pending" ){%>
+                            <a href="/deactiveUser?id=<%=details.payment_status%>">pending</a>
+                            <%}else{%>
+                              <a href="/activeUser?id=<%=details.payment_status%>">Paid</a>
+                              <%}%> -->
+                            </td>
+                        <td><%- details.payment_status%></td>
+                        <td><%- details.image%></td>
+                        <td><%- details.created_at%></td>
+
+
+                      </tr>
+
+                      <% i++; }) } %>
+
+                  </tbody>
+                </table>
       </div>
     </div>
   </div>
+</div>
 
   <%- include('footer') -%>
 
-
+  <script>
+  $( function() {
+    $( "#datepicker" ).datepicker();
+  } );
+  </script>
   <script>
 $(document).ready( function () {
   $('.table').DataTable();
