--- a/views/admin/front-admin/main-dashboard.ejs
+++ b/views/admin/front-admin/main-dashboard.ejs
@@ -12,10 +12,10 @@
                    <div class="card bg-gradient-danger card-img-holder text-white">
                   <div class="card-body">
                     <img src="/admin_assets/images/other/circle.svg" class="card-img-absolute" alt="circle-image" />
-                    <h4 class="font-weight-normal mb-3">Total $EBT Sold 
+                    <h4 class="font-weight-normal mb-3">Total $EBT 
                     </h4>
                     <img src="/admin_assets/images/buy-coin.png" class="img-fluid icon-img">
-                    <h2 class="mb-5"><%=ebtSold%></h2>
+                    <h2 class="mb-5">1000000000000000</h2>
                   </div>
                 </div>
                  </a>
@@ -29,7 +29,7 @@
                     </h4>
                     <img src="/admin_assets/images/buy-coin.png" class="img-fluid icon-img">
 
-                    <h2 class="mb-5">$ 15,0000</h2>
+                    <h2 class="mb-5"><%=EBT_balance%></h2>
                   </div>
                 </div>
                  </a>
@@ -39,13 +39,14 @@
                   <div class="card bg-gradient-danger card-img-holder text-white">
                   <div class="card-body">
                     <img src="/admin_assets/images/other/circle.svg" class="card-img-absolute" alt="circle-image" />
-                    <h4 class="font-weight-normal mb-3">$EBT Balance with Admin 
+                    <h4 class="font-weight-normal mb-3">Total $EBT Sold 
                     </h4>
                     <img src="/admin_assets/images/buy-coin.png" class="img-fluid icon-img">
-                    <h2 class="mb-5"><% if(EBT_balance !='' && EBT_balance !=null && EBT_balance !=undefined){ %>
+                    <!-- <h2 class="mb-5"><% if(EBT_balance !='' && EBT_balance !=null && EBT_balance !=undefined){ %>
                       <%- EBT_balance %>
                         <% }else{ %>0
-                          <% } %></h2>
+                          <% } %></h2> -->
+                          <h2 class="mb-5"><%=ebtSold%></h2>
                   </div>
                 </div>
                 </a>
