admin wallet address change

--- a/views/buy-coin.ejs
+++ b/views/buy-coin.ejs
@@ -321,28 +321,28 @@
         if(currencyType=="eth")
           {
                let wallet_address="0xcB99B8269a22fa818Fb766B10Af612Fe97CC463d";
-               document.getElementById("user_wallet_address").value = wallet_address;
+               document.getElementById("eth_wallet_address").value = wallet_address;
 
           }
           else if(currencyType=="btc")
           {
               let wallet_address="bc1q5n0ry5k4zxjv4a4cdg6neuvfdyh290gej9fluw";
-               document.getElementById("user_wallet_address").value = wallet_address;
+               document.getElementById("eth_wallet_address").value = wallet_address;
           }
           else if(currencyType=="bnb")
           {
              let wallet_address="1xp3pycd9qldu0ndkn2qhzs2ljyr94h20zwgsgt";
-               document.getElementById("user_wallet_address").value = wallet_address;
+               document.getElementById("eth_wallet_address").value = wallet_address;
           }
            else if(currencyType=="usdt")
            {
               let wallet_address="0xcB99B8269a22fa818Fb766B10Af612Fe97CC463d";
-               document.getElementById("user_wallet_address").value = wallet_address;
+               document.getElementById("eth_wallet_address").value = wallet_address;
            }
            else
            {
               let wallet_address="0xcB99B8269a22fa818Fb766B10Af612Fe97CC463d";
-               document.getElementById("user_wallet_address").value = wallet_address;
+               document.getElementById("eth_wallet_address").value = wallet_address;
            }
         
         $.ajax({
