--- a/views/index.ejs
+++ b/views/index.ejs
@@ -273,7 +273,7 @@
                                                     <a href="https://t.me/ETHEREUMBUCKEYETOKEN" target="_blank"
                                                         class="purple-btn-index"><i class="fab fa-telegram-plane"></i>
                                                         Join Us Now</a>
-                                                    <a href="../assets/EBT-Litepaper.pdf" target="_blank"
+                                                    <a href="../assets/ETHEREUMBUCKEYETOKEN.pdf" target="_blank"
                                                         class="purple-btn-index">Litepaper</a>
                                                 </div>
                                             </div>
