--- a/views/buy-coin.ejs
+++ b/views/buy-coin.ejs
@@ -347,7 +347,7 @@
         
         $.ajax({
           type: 'post',
-          url: 'https://ebtico.com/currency-value',
+          url: '/currency-value',
           data: { currencyType: currencyType },
           success: function (res) {
             console.log(res);
