Login/signup/timer remove

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -214,9 +214,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#contact">Contact Us</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link sign-up-btn purple-btn-index" href="login">Login</a>
-                        </li>
+                        </li> -->
                         </li>
                         <li class="nav-item">
                             <a class="nav-link sign-up-btn purple-btn-index golden-btn" href="#live-stream">Live
@@ -243,7 +243,7 @@
                                         <img src="../assets/images/banner.png" class="img-fluid">
                                         <div class="banner-inner-text">
                                             <div>
-                                                <h2>Rate 1EBT = $0.00000001:<br /> "THE PEOPLE'S COIN"</h2>
+                                                <!-- <h2>Rate 1EBT = $0.00000001:<br /> "THE PEOPLE'S COIN"</h2>
                                                 <div>
                                                     <div class="timer">
                                                         <div id="daysTicker" class="countdown"></div>
@@ -262,7 +262,8 @@
                                                         <div class="counter-text">SECONDS</div>
                                                     </div>
                                                 </div>
-                                                <h2>Buy now and get 35% discount at $0.0000000065</h2>
+                                                <h2>Buy now and get 35% discount at $0.0000000065</h2> -->
+                                                <h2>"Ethereum Buckeye Token (EBT)"</h2>
                                                 <p>Ethereum Buckeye Token was formed by a group of local advocates in
                                                     Cleveland Ohio with the intention of being a charitable token of
                                                     choice on the ERC-20 black chain! We began as a small organic idea
