--- a/views/index.ejs
+++ b/views/index.ejs
@@ -532,7 +532,7 @@
             <div class="row">
                 <div class="col-md-12 m-auto ">
                     <div class="text-center">
-                        <img src="assets/images/claim.png" class="img-fluid w-100">
+                        <img src="assets/images/claim1.png" class="img-fluid w-100">
                     </div>
                 </div>
             </div>
