changes by romil sir

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -263,7 +263,7 @@
                                                     </div>
                                                 </div>
                                                 <h2>Buy now and get 35% discount at $0.0000000065</h2> -->
-                                                <h2>"Ethereum Buckeye Token (EBT)"</h2>
+                                                <h2>"FAIR LAUNCH NO TEAM TOKENS"</h2>
                                                 <p>Ethereum Buckeye Token was formed by a group of local advocates in
                                                     Cleveland Ohio with the intention of being a charitable token of
                                                     choice on the ERC-20 black chain! We began as a small organic idea
@@ -272,8 +272,8 @@
                                                     businesses and organizations all over North America.</p>
                                                 <div class="banner-btn">
                                                     <a href="https://t.me/ETHEREUMBUCKEYETOKEN" target="_blank"
-                                                        class="purple-btn-index"><i class="fab fa-telegram-plane"></i>
-                                                        Join Us Now</a>
+                                                        class="purple-btn-index">
+                                                        Claim Your Free NFT</a>
                                                     <a href="../assets/ETHEREUMBUCKEYETOKEN.pdf" target="_blank"
                                                         class="purple-btn-index">Litepaper</a>
                                                 </div>
